[package]
name = "leptos-leaflet-velocity"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A Leptos leaflet-velocity component"
homepage = "https://github.com/AntoineRenaud91/leaflet-velocity-rs"
repository = "https://github.com/AntoineRenaud91/leaflet-velocity-rs"
version = "0.3.0"
edition = "2024"
readme = "README.md"
keywords = ["leaflet", "web", "wasm", "graphics","leptos"]
publish = true


[dependencies]
bon = "3.7.2"
js-sys = "0.3.81"
leaflet = "0.5"
leaflet-velocity-sys = {version="0.2.0",  path = "../leaflet-velocity-sys", features = ["leptos"] }
leptos = { version = "0.8.9", features = ["csr"] }
leptos-leaflet = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.104"
