[package]
name = "leaflet-velocity-rs-example"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An example using leaflet-velocity-sys"
version = "0.3.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
leaflet-velocity-sys = { path = "../../leaflet-velocity-sys" }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlAnchorElement", "Window"] }
leaflet = "0.5.0"
