[package]
name = "leptos-leaflet-velocity-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.4", features = ["csr"] }
leptos-leaflet = { version = "0.6.1", features = ["csr"] }
leptos-leaflet-velocity = { version = "0.1.0", path = "../../leptos-leaflet-velocity" }
