[package]
name = "leptos-leaflet-velocity-example"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
license = "MIT/Apache-2.0"
description = "An example using leptos-leaflet-velocity"
version = "0.2.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.9", features = ["csr"] }
leptos-leaflet = { version = "0.10.1", features = ["csr"] }
leptos-leaflet-velocity = { version = "0.2.0", path = "../../leptos-leaflet-velocity" }
web-sys = "0.3.80"
